# src/main/java/com/inditex/tariff_manager/shared/persistence/h2/repositories/PriceEntityRepository.java
@@ -1,16 +1,16 @@
 package com.inditex.tariff_manager.shared.persistence.h2.repositories;
 
 import com.inditex.tariff_manager.shared.persistence.h2.entities.PriceEntity;
+import java.time.LocalDateTime;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.data.jpa.repository.Query;
 import org.springframework.data.repository.query.Param;
 import org.springframework.stereotype.Repository;
 
-import java.time.LocalDateTime;
-
 @Repository
 public interface PriceEntityRepository extends JpaRepository<PriceEntity, Integer> {
 
     @Query("SELECT p FROM PriceEntity p WHERE p.productId = :productId AND p.brandId = :brandId AND :date BETWEEN p.startDate AND p.endDate ORDER BY p.priority DESC LIMIT 1")
-    PriceEntity findHighestPriorityPriceEntity(@Param("productId") int productId, @Param("brandId") int brandId, @Param("date") LocalDateTime date);
+    PriceEntity findHighestPriorityPriceEntity(@Param("productId") int productId, @Param("brandId") int brandId,
+        @Param("date") LocalDateTime date);
 }
