# src/main/resources/static/swagger.yaml
@@ -1,117 +1,117 @@
 openapi: 3.0.3
 info:
-  title: Swagger Tariff Manager - OpenAPI 3.0
-  description: |-
-    API definition with the endpoints available in the tariff manager microservice
-    
-    Some useful links:
-    - [Zalando RESTful API and Event Guidelines](https://opensource.zalando.com/restful-api-guidelines/)
+    title: Swagger Tariff Manager - OpenAPI 3.0
+    description: |-
+        API definition with the endpoints available in the tariff manager microservice
+        
+        Some useful links:
+        - [Zalando RESTful API and Event Guidelines](https://opensource.zalando.com/restful-api-guidelines/)
 
-  contact:
-    email: lucasdant99@gmail.com
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: 1.0.11
+    contact:
+        email: lucasdant99@gmail.com
+    license:
+        name: Apache 2.0
+        url: http://www.apache.org/licenses/LICENSE-2.0.html
+    version: 1.0.11
 servers:
-  - url: http://localhost:8080
+    -   url: http://localhost:8080
 tags:
-  - name: tariff
-    description: Everything about product tariffs
+    -   name: tariff
+        description: Everything about product tariffs
 paths:
-  /actuator/health:
-    get:
-      tags:
-        - health
-      summary: Check the server health
-      description: Check the server health
-      operationId: getHealth
-      responses:
-        '200':
-          description: 'Successful operation'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/HealthResponse'
+    /actuator/health:
+        get:
+            tags:
+                - health
+            summary: Check the server health
+            description: Check the server health
+            operationId: getHealth
+            responses:
+                '200':
+                    description: 'Successful operation'
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/HealthResponse'
 
-  /tariffs:
-    get:
-      tags:
-        - tariff
-      summary: Retrieve tariff information for a product
-      description: Retrieve tariff information for a product
-      operationId: search
-      parameters:
-        - name: product_id
-          in: query
-          description: ID of the product for which we want to obtain the rate
-          required: true
-          schema:
-            type: integer
-            format: int64
-        - name: brand_id
-          in: query
-          description: ID of the brand for which we want to obtain the rate
-          required: true
-          schema:
-            type: integer
-            format: int64
-        - name: date
-          in: query
-          description: Date for which we want to obtain the rate
-          required: true
-          schema:
-            type: string
-            format: date-time
+    /tariffs:
+        get:
+            tags:
+                - tariff
+            summary: Retrieve tariff information for a product
+            description: Retrieve tariff information for a product
+            operationId: search
+            parameters:
+                -   name: product_id
+                    in: query
+                    description: ID of the product for which we want to obtain the rate
+                    required: true
+                    schema:
+                        type: integer
+                        format: int64
+                -   name: brand_id
+                    in: query
+                    description: ID of the brand for which we want to obtain the rate
+                    required: true
+                    schema:
+                        type: integer
+                        format: int64
+                -   name: date
+                    in: query
+                    description: Date for which we want to obtain the rate
+                    required: true
+                    schema:
+                        type: string
+                        format: date-time
 
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Tariff'
-        '400':
-          description: Invalid ID supplied
-        '404':
-          description: Tariff not found
+            responses:
+                '200':
+                    description: Successful operation
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Tariff'
+                '400':
+                    description: Invalid ID supplied
+                '404':
+                    description: Tariff not found
 
 
 components:
-  schemas:
-    Tariff:
-      type: object
-      properties:
-        product_id:
-          type: integer
-          format: int64
-          example: 35457
-        brand_id:
-          type: integer
-          format: int64
-          example: 5
-        tariff_id:
-          type: integer
-          format: int32
-          example: 7
-        tariff_start_date:
-          type: string
-          format: date-time
-        tariff_end_date:
-          type: string
-          format: date-time
-        price:
-          type: object
-          properties:
-            amount:
-              type: number
-              example: 35.50
-            currency:
-              type: string
-              example: EUR
-    HealthResponse:
-      type: object
-      properties:
-        status:
-          type: string
-          example: "UP"
+    schemas:
+        Tariff:
+            type: object
+            properties:
+                product_id:
+                    type: integer
+                    format: int64
+                    example: 35457
+                brand_id:
+                    type: integer
+                    format: int64
+                    example: 5
+                tariff_id:
+                    type: integer
+                    format: int32
+                    example: 7
+                tariff_start_date:
+                    type: string
+                    format: date-time
+                tariff_end_date:
+                    type: string
+                    format: date-time
+                price:
+                    type: object
+                    properties:
+                        amount:
+                            type: number
+                            example: 35.50
+                        currency:
+                            type: string
+                            example: EUR
+        HealthResponse:
+            type: object
+            properties:
+                status:
+                    type: string
+                    example: "UP"
